# zig_static_lib

./: .gitignore  Readme.md
mylib/: CMakeLists.txt  mylib.cpp  mylib.h
zig/: build.zig
zig/src/: main.zig
