cmake_minimum_required(VERSION 3.18)

option(BUILD_SHARED_LIBS "Build using shared libraries" OFF)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS ON)

project(MyLib LANGUAGES CXX)

set(MYLIB_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/mylib.cpp)

add_library(${PROJECT_NAME} ${MYLIB_SOURCES})

set(CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS_RELEASE} -s")
set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -s")